--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
-  
+
     <div>
         <h1>Random Dog Generator</h1>
 
         <img />
-        
+
         <div>
             <div>
                 <p>Breed</p>
@@ -31,6 +31,8 @@
         </div>
     </div>
 
+    <button>Get Random Dog</button>
+    <button>Add to Favourites</button>
 
     <div>
         <div>
