--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Link to Styling -->
     <link href="style.css" rel="stylesheet" />
 
+<!-- Link to Java -->
+ <script src="Java-Script/database.js" defer></script>
+
 </head>
 
 <body>
