added breed list

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- Link to Styling -->
     <link href="style.css" rel="stylesheet" />
 
-<!-- Link to Java -->
- <script src="Java-Script/database.js" defer></script>
+    <!-- Link to Java -->
+    <script src="Java-Script/database.js" defer></script>
 
 </head>
 
@@ -21,17 +21,19 @@
 
         <img />
 
-        <div class="container flex-column">
+        <!-- Generator -->
+        <div>
+            <!-- Breed Selector -->
             <div class="container justify-left">
                 <p>Breed</p>
-                <select>
+                <select id="breed-select">
                     <option>Any</option>
                 </select>
             </div>
 
             <div class="container justify-left">
                 <p>Sub Breed</p>
-                <select>
+                <select id="sub-breed-select">
                     <option>Any</option>
                 </select>
             </div>
