added image height

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container flex-column">
         <h1>Random Dog Generator</h1>
 
-        <img />
+        <img id="dog-image" alt="random dog"/>
 
         <!-- Generator -->
         <div>
