added breed selections

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </select>
             </div>
 
-            <button>Get Random Dog</button>
+            <button id="random-dog-button">Get Random Dog</button>
             <button>Add to Favourites</button>
 
         </div>
