--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             <div class="container justify-left">
                 <p>Breed</p>
                 <select id="breed-select">
-                    <option>Any</option>
+                    <option value="any">Any</option>
                 </select>
             </div>
 
             <div class="container justify-left">
                 <p>Sub Breed</p>
                 <select id="sub-breed-select">
-                    <option>Any</option>
+                    <option value="any">Any</option>
                 </select>
             </div>
 
