moved h2 out of fave div

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
     </div>
 
     <div class="container flex-column">
+        <!-- Title -->
+        <h2>Your Favourites</h2>
         <div id="favourites-div">
-            <h2>Your Favourites</h2>
+            
 
             <!-- New Favourite Images will be Added -->
         </div>
