--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <div class="container flex-column">
         <!-- Title -->
         <h2>Your Favourites</h2>
-        <div id="favourites-div">
-            
+
+        <div id="favourites-div" class="container flex-wrap">
 
             <!-- New Favourite Images will be Added -->
         </div>
