added download  all fave button

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <!-- New Favourite Images will be Added -->
         </div>
-        <button>Download All Favourites</button>
+        <button id="download-all-favourtites-button">Download All Favourites</button>
     </div>
 
 
